Replace logo placeholders with image links
Updated logo placeholders with links to images.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Header Section -->
     <header>
-        <div class="logo-placeholder">School Logo</div>
+        <div class="https://drive.google.com/file/d/1Bk67U4vUEy9WCraH_-KxpIopSMbZ4CPk/view?usp=drive_link">School Logo</div>
         <h1>House Score Tracker</h1>
 
         <!-- Admin Button -->
@@ -41,25 +41,25 @@
     <section class="scoreboard">
 
     <div class="house-card acrobats">
-        <div class="logo-placeholder">Acrobats Logo</div>
+        <div class="https://drive.google.com/file/d/1XeodyeHP9LkNLJ7YNpPyT2VQw4n17qz6/view?usp=drive_link">Acrobats Logo</div>
         <h2>Acrobats</h2>
         <p class="score" id="score-acrobats">0</p>
     </div>
 
     <div class="house-card quicksilver">
-        <div class="logo-placeholder">Quicksilver Logo</div>
+        <div class="https://drive.google.com/file/d/1dcP4k9WdbAL9ekHNznPZeMuYEQvH6UAI/view?usp=drive_link">Quicksilver Logo</div>
         <h2>Quicksilver</h2>
         <p class="score" id="score-quicksilver">0</p>
     </div>
 
     <div class="house-card druids">
-        <div class="logo-placeholder">Druids Logo</div>
+        <div class="https://drive.google.com/file/d/1vJIUIs9oXM1TatS_gfb9gqGayVa1N9ky/view?usp=drive_link">Druids Logo</div>
         <h2>Druids</h2>
         <p class="score" id="score-druids">0</p>
     </div>
 
     <div class="house-card bravehearts">
-        <div class="logo-placeholder">Bravehearts Logo</div>
+        <div class="https://drive.google.com/file/d/1V5cMNhUiwfmeuRia7GLn2Odh87GSaYS_/view?usp=drive_link">Bravehearts Logo</div>
         <h2>Bravehearts</h2>
         <p class="score" id="score-bravehearts">0</p>
     </div>
@@ -69,3 +69,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
