Change image source paths in index.html
Updated image paths to include 'project/' prefix.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Header Section -->
     <header>
-        <img src="smiling-int-school-logo-1-removebg-preview.png" 
+        <img src="project/smiling-int-school-logo-1-removebg-preview.png" 
              alt="School Logo" class="school-logo">
         <h1>House Score Tracker</h1>
 
@@ -42,25 +42,25 @@
     <section class="scoreboard">
 
         <div class="house-card acrobats">
-            <img src="acrobats.jpeg" alt="Acrobats Logo" class="house-logo">
+            <img src="project/acrobats.jpeg" alt="Acrobats Logo" class="house-logo">
             <h2>Acrobats</h2>
             <p class="score" id="score-acrobats">0</p>
         </div>
 
         <div class="house-card quicksilver">
-            <img src="quicksilver.jpeg" alt="Quicksilver Logo" class="house-logo">
+            <img src="project/quicksilver.jpeg" alt="Quicksilver Logo" class="house-logo">
             <h2>Quicksilver</h2>
             <p class="score" id="score-quicksilver">0</p>
         </div>
 
         <div class="house-card druids">
-            <img src="druids.jpeg" alt="Druids Logo" class="house-logo">
+            <img src="project/druids.jpeg" alt="Druids Logo" class="house-logo">
             <h2>Druids</h2>
             <p class="score" id="score-druids">0</p>
         </div>
 
         <div class="house-card bravehearts">
-            <img src="bravehearts.jpeg" alt="Bravehearts Logo" class="house-logo">
+            <img src="project/bravehearts.jpeg" alt="Bravehearts Logo" class="house-logo">
             <h2>Bravehearts</h2>
             <p class="score" id="score-bravehearts">0</p>
         </div>
@@ -70,4 +70,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
