--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
         /* Basic Reset */
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
+        * { box-sizing: border-box; margin: 0; padding: 0; }
 
         body {
             font-family: Arial, sans-serif;
@@ -34,10 +30,7 @@
             object-fit: contain;
         }
 
-        h1 {
-            flex-grow: 1;
-            text-align: center;
-        }
+        h1 { flex-grow: 1; text-align: center; }
 
         .admin-button {
             padding: 10px 20px;
@@ -60,25 +53,11 @@
             z-index: 1000;
         }
 
-        .hidden {
-            display: none;
-        }
+        .hidden { display: none; }
 
-        .admin-panel h2 {
-            margin-bottom: 15px;
-        }
-
-        .admin-panel label {
-            display: block;
-            margin-top: 10px;
-            font-weight: bold;
-        }
-
-        .admin-panel input {
-            width: 100%;
-            padding: 5px;
-            margin-top: 5px;
-        }
+        .admin-panel h2 { margin-bottom: 15px; }
+        .admin-panel label { display: block; margin-top: 10px; font-weight: bold; }
+        .admin-panel input { width: 100%; padding: 5px; margin-top: 5px; }
 
         .admin-panel button {
             margin-top: 15px;
@@ -115,7 +94,7 @@
         .house-logo {
             width: 100%;
             height: 150px;
-            object-fit: cover; /* auto-crop */
+            object-fit: cover;
             border-radius: 10px;
             margin-bottom: 10px;
         }
@@ -125,6 +104,43 @@
             font-weight: bold;
             margin-top: 5px;
         }
+
+        /* Leaderboard */
+        .leaderboard {
+            margin: 30px auto;
+            width: 90%;
+            max-width: 600px;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+        }
+
+        .leaderboard h2 {
+            text-align: center;
+            margin-bottom: 15px;
+        }
+
+        .leaderboard-list {
+            list-style: none;
+            padding: 0;
+        }
+
+        .leaderboard-item {
+            display: flex;
+            justify-content: space-between;
+            padding: 10px 15px;
+            margin: 5px 0;
+            border-radius: 8px;
+            font-size: 1.2em;
+            color: white;
+            font-weight: bold;
+        }
+
+        .acrobats-color { background-color: #ff4d4d; }
+        .quicksilver-color { background-color: #00b3b3; }
+        .druids-color { background-color: #59b300; }
+        .bravehearts-color { background-color: #cc00cc; }
     </style>
 </head>
 <body>
@@ -140,7 +156,7 @@
     <!-- Admin Panel Popup -->
     <div id="adminPanel" class="admin-panel hidden">
         <h2>Admin Panel</h2>
-        <p>Enter a number to add or subtract points. Example: -5</p>
+        <p>Enter positive or negative numbers. Example: -5</p>
 
         <label>Acrobats (+ / -):</label>
         <input type="number" id="admin-acrobats">
@@ -187,7 +203,13 @@
 
     </section>
 
-    <!-- SCORE SCRIPT -->
+    <!-- LEADERBOARD -->
+    <section class="leaderboard">
+        <h2>Leaderboard</h2>
+        <ul class="leaderboard-list" id="leaderboardList"></ul>
+    </section>
+
+    <!-- SCORE + LEADERBOARD SCRIPT -->
     <script>
         function openAdmin() {
             document.getElementById('adminPanel').classList.remove('hidden');
@@ -200,42 +222,62 @@
         function applyManualScores() {
 
             // Score Elements
-            const scoreAc = document.getElementById('score-acrobats');
-            const scoreQk = document.getElementById('score-quicksilver');
-            const scoreDr = document.getElementById('score-druids');
-            const scoreBh = document.getElementById('score-bravehearts');
+            const scores = {
+                acrobats: document.getElementById('score-acrobats'),
+                quicksilver: document.getElementById('score-quicksilver'),
+                druids: document.getElementById('score-druids'),
+                bravehearts: document.getElementById('score-bravehearts')
+            };
 
             // Inputs
-            const inpAc = document.getElementById('admin-acrobats');
-            const inpQk = document.getElementById('admin-quicksilver');
-            const inpDr = document.getElementById('admin-druids');
-            const inpBh = document.getElementById('admin-bravehearts');
+            const inputs = {
+                acrobats: document.getElementById('admin-acrobats'),
+                quicksilver: document.getElementById('admin-quicksilver'),
+                druids: document.getElementById('admin-druids'),
+                bravehearts: document.getElementById('admin-bravehearts')
+            };
 
-            // Update only if input is not empty
-            if (inpAc.value.trim() !== "") {
-                scoreAc.textContent = parseInt(scoreAc.textContent) + parseInt(inpAc.value);
+            // Apply score changes only if input has value
+            for (let team in inputs) {
+                if (inputs[team].value.trim() !== "") {
+                    scores[team].textContent =
+                        parseInt(scores[team].textContent) + parseInt(inputs[team].value);
+                }
+
+                // Clear input
+                inputs[team].value = "";
             }
 
-            if (inpQk.value.trim() !== "") {
-                scoreQk.textContent = parseInt(scoreQk.textContent) + parseInt(inpQk.value);
-            }
-
-            if (inpDr.value.trim() !== "") {
-                scoreDr.textContent = parseInt(scoreDr.textContent) + parseInt(inpDr.value);
-            }
-
-            if (inpBh.value.trim() !== "") {
-                scoreBh.textContent = parseInt(scoreBh.textContent) + parseInt(inpBh.value);
-            }
-
-            // Clear inputs
-            inpAc.value = "";
-            inpQk.value = "";
-            inpDr.value = "";
-            inpBh.value = "";
-
+            updateLeaderboard();
             closeAdmin();
         }
+
+        function updateLeaderboard() {
+            const leaderboard = document.getElementById("leaderboardList");
+
+            // Collect team data
+            let teams = [
+                { name: "Acrobats", score: parseInt(document.getElementById('score-acrobats').textContent), color: "acrobats-color" },
+                { name: "Quicksilver", score: parseInt(document.getElementById('score-quicksilver').textContent), color: "quicksilver-color" },
+                { name: "Druids", score: parseInt(document.getElementById('score-druids').textContent), color: "druids-color" },
+                { name: "Bravehearts", score: parseInt(document.getElementById('score-bravehearts').textContent), color: "bravehearts-color" }
+            ];
+
+            // Sort
+            teams.sort((a, b) => b.score - a.score);
+
+            // Rebuild leaderboard
+            leaderboard.innerHTML = "";
+            teams.forEach(team => {
+                const li = document.createElement("li");
+                li.className = `leaderboard-item ${team.color}`;
+                li.innerHTML = `${team.name} <span>${team.score}</span>`;
+                leaderboard.appendChild(li);
+            });
+        }
+
+        // Initialize leaderboard on load
+        updateLeaderboard();
     </script>
 
 </body>
