--- a/index.html
+++ b/index.html
@@ -1,80 +1,277 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>House Score Tracker</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>House Score Tracker</title>
+<style>
+/* --- BASIC LAYOUT --- */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #fafafa;
+    color: #333;
+    transition: all 0.3s ease;
+}
+
+header {
+    text-align: center;
+    padding: 20px;
+    background: #333;
+    color: white;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+header h1 {
+    flex-grow: 1;
+    margin: 0;
+}
+
+.school-logo {
+    width: 80px;
+}
+
+.header-buttons {
+    display: flex;
+    gap: 10px;
+}
+
+.admin-button {
+    padding: 10px 18px;
+    background: #007bff;
+    border: none;
+    border-radius: 8px;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+/* --- ADMIN PANEL --- */
+.admin-panel {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 25px;
+    border-radius: 12px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    width: 300px;
+    z-index: 1000;
+    transition: all 0.3s ease;
+}
+
+.hidden { display: none; }
+
+.admin-panel input {
+    width: 100%;
+    margin: 8px 0 15px;
+    padding: 8px;
+    border-radius: 6px;
+    border: 1px solid #aaa;
+}
+
+/* --- SCOREBOARD --- */
+.scoreboard {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 30px;
+    flex-wrap: wrap;
+}
+
+.house-card {
+    width: 200px;
+    background: white;
+    border-radius: 12px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    transition: all 0.3s ease;
+}
+
+.house-logo {
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+
+.score { font-size: 32px; margin-top: 10px; }
+
+/* --- LEADERBOARD --- */
+.leaderboard {
+    margin: 40px auto;
+    padding: 20px;
+    width: 90%;
+    max-width: 600px;
+    background: #f7f7f7;
+    border-radius: 12px;
+    text-align: center;
+    transition: all 0.3s ease;
+}
+
+.leaderboard h2 { font-size: 28px; margin-bottom: 15px; }
+
+.leaderboard ul { list-style: none; padding: 0; }
+
+.leaderboard li {
+    display: flex;
+    justify-content: space-between;
+    padding: 12px 20px;
+    border-radius: 8px;
+    margin: 8px 0;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+/* Team colors */
+.lb-acrobats { background: #59b300; color: white; }
+.lb-quicksilver { background: #ff4d4d; color: white; }
+.lb-druids { background: #0073e6; color: white; }
+.lb-bravehearts { background: #ffcc00; color: #333; }
+
+/* --- DARK MODE --- */
+body.dark-mode {
+    background: #121212;
+    color: #f0f0f0;
+}
+body.dark-mode header { background: #1f1f1f; color: #f0f0f0; }
+body.dark-mode .admin-panel { background: #1f1f1f; color: #f0f0f0; }
+body.dark-mode .house-card { background: #1e1e1e; }
+body.dark-mode .leaderboard { background: #1e1e1e; }
+</style>
 </head>
 <body>
 
-    <!-- Header Section -->
-    <header>
-        <img src="project/smiling-int-school-logo-1-removebg-preview.png" 
-             alt="School Logo" class="school-logo">
-        <h1>House Score Tracker</h1>
-
-        <div class="header-buttons">
-            <button id="darkModeBtn" class="admin-button" onclick="toggleDarkMode()">🌙 Dark Mode</button>
-            <button id="adminBtn" class="admin-button" onclick="openAdmin()">Admin</button>
-        </div>
-    </header>
-
-    <!-- Admin Panel Popup -->
-    <div id="adminPanel" class="admin-panel hidden">
-        <h2>Admin Panel</h2>
-
-        <label>Acrobats:</label>
-        <input type="number" id="admin-acrobats">
-
-        <label>Quicksilver:</label>
-        <input type="number" id="admin-quicksilver">
-
-        <label>Druids:</label>
-        <input type="number" id="admin-druids">
-
-        <label>Bravehearts:</label>
-        <input type="number" id="admin-bravehearts">
-
-        <button onclick="applyManualScores()">Update Scores</button>
-        <button class="close" onclick="closeAdmin()">Close</button>
+<header>
+    <img src="project/smiling-int-school-logo-1-removebg-preview.png" alt="School Logo" class="school-logo">
+    <h1>House Score Tracker</h1>
+    <div class="header-buttons">
+        <button class="admin-button" onclick="toggleDarkMode()">🌙 Dark Mode</button>
+        <button class="admin-button" onclick="openAdmin()">Admin</button>
     </div>
+</header>
 
-    <!-- House Scoreboard -->
-    <section class="scoreboard">
+<!-- Admin Panel -->
+<div id="adminPanel" class="admin-panel hidden">
+    <h2>Admin Panel</h2>
+    <label>Acrobats:</label><input type="number" id="admin-acrobats">
+    <label>Quicksilver:</label><input type="number" id="admin-quicksilver">
+    <label>Druids:</label><input type="number" id="admin-druids">
+    <label>Bravehearts:</label><input type="number" id="admin-bravehearts">
+    <button onclick="applyManualScores()">Update Scores</button>
+    <button class="close" onclick="closeAdmin()">Close</button>
+</div>
 
-        <div class="house-card acrobats">
-            <img src="project/acrobats.jpeg" alt="Acrobats Logo" class="house-logo">
-            <h2>Acrobats</h2>
-            <p class="score" id="score-acrobats">0</p>
-        </div>
+<!-- Scoreboard -->
+<section class="scoreboard">
+    <div class="house-card acrobats">
+        <img src="project/acrobats.jpeg" class="house-logo">
+        <h2>Acrobats</h2>
+        <p class="score" id="score-acrobats">0</p>
+    </div>
+    <div class="house-card quicksilver">
+        <img src="project/quicksilver.jpeg" class="house-logo">
+        <h2>Quicksilver</h2>
+        <p class="score" id="score-quicksilver">0</p>
+    </div>
+    <div class="house-card druids">
+        <img src="project/druids.jpeg" class="house-logo">
+        <h2>Druids</h2>
+        <p class="score" id="score-druids">0</p>
+    </div>
+    <div class="house-card bravehearts">
+        <img src="project/bravehearts.jpeg" class="house-logo">
+        <h2>Bravehearts</h2>
+        <p class="score" id="score-bravehearts">0</p>
+    </div>
+</section>
 
-        <div class="house-card quicksilver">
-            <img src="project/quicksilver.jpeg" alt="Quicksilver Logo" class="house-logo">
-            <h2>Quicksilver</h2>
-            <p class="score" id="score-quicksilver">0</p>
-        </div>
+<!-- Leaderboard -->
+<section class="leaderboard">
+    <h2>Leaderboard</h2>
+    <ul id="leaderboard-list"></ul>
+</section>
 
-        <div class="house-card druids">
-            <img src="project/druids.jpeg" alt="Druids Logo" class="house-logo">
-            <h2>Druids</h2>
-            <p class="score" id="score-druids">0</p>
-        </div>
+<script>
+/* --- ADMIN PANEL --- */
+function openAdmin() { document.getElementById("adminPanel").classList.remove("hidden"); }
+function closeAdmin() { document.getElementById("adminPanel").classList.add("hidden"); }
 
-        <div class="house-card bravehearts">
-            <img src="project/bravehearts.jpeg" alt="Bravehearts Logo" class="house-logo">
-            <h2>Bravehearts</h2>
-            <p class="score" id="score-bravehearts">0</p>
-        </div>
+/* --- SCORE SAVE / LOAD --- */
+function saveScores() {
+    const scores = {
+        acrobats: document.getElementById("score-acrobats").textContent,
+        quicksilver: document.getElementById("score-quicksilver").textContent,
+        druids: document.getElementById("score-druids").textContent,
+        bravehearts: document.getElementById("score-bravehearts").textContent
+    };
+    localStorage.setItem("houseScores", JSON.stringify(scores));
+}
+function loadScores() {
+    const saved = JSON.parse(localStorage.getItem("houseScores"));
+    if(saved){
+        document.getElementById("score-acrobats").textContent = saved.acrobats;
+        document.getElementById("score-quicksilver").textContent = saved.quicksilver;
+        document.getElementById("score-druids").textContent = saved.druids;
+        document.getElementById("score-bravehearts").textContent = saved.bravehearts;
+    }
+}
 
-    </section>
+/* --- APPLY SCORES --- */
+function applyManualScores() {
+    const fields = [
+        { input:"admin-acrobats", score:"score-acrobats" },
+        { input:"admin-quicksilver", score:"score-quicksilver" },
+        { input:"admin-druids", score:"score-druids" },
+        { input:"admin-bravehearts", score:"score-bravehearts" }
+    ];
+    fields.forEach(item=>{
+        const inputEl=document.getElementById(item.input);
+        if(inputEl.value.trim()!==""){
+            const scoreEl=document.getElementById(item.score);
+            scoreEl.textContent = parseInt(scoreEl.textContent)+parseInt(inputEl.value);
+        }
+        inputEl.value="";
+    });
+    saveScores();
+    updateLeaderboard();
+    closeAdmin();
+}
 
-    <!-- LEADERBOARD -->
-    <section class="leaderboard">
-        <h2>Leaderboard</h2>
-        <ul id="leaderboard-list"></ul>
-    </section>
+/* --- LEADERBOARD --- */
+function updateLeaderboard() {
+    const scores=[
+        {name:"Acrobats", score:parseInt(document.getElementById("score-acrobats").textContent), class:"lb-acrobats"},
+        {name:"Quicksilver", score:parseInt(document.getElementById("score-quicksilver").textContent), class:"lb-quicksilver"},
+        {name:"Druids", score:parseInt(document.getElementById("score-druids").textContent), class:"lb-druids"},
+        {name:"Bravehearts", score:parseInt(document.getElementById("score-bravehearts").textContent), class:"lb-bravehearts"}
+    ];
+    scores.sort((a,b)=>b.score-a.score);
+    const list=document.getElementById("leaderboard-list");
+    list.innerHTML="";
+    scores.forEach(entry=>{
+        const li=document.createElement("li");
+        li.className=entry.class;
+        li.innerHTML=`${entry.name} <span>${entry.score}</span>`;
+        list.appendChild(li);
+    });
+}
 
-    <script src="script.js"></script>
+/* --- DARK MODE --- */
+function toggleDarkMode() { document.body.classList.toggle("dark-mode"); }
+
+/* --- INITIALIZE --- */
+loadScores();
+updateLeaderboard();
+</script>
 </body>
 </html>
