--- a/index.html
+++ b/index.html
@@ -16,25 +16,24 @@ body {
 }
 
 header {
-    text-align: center;
-    padding: 20px;
-    background: #333;
-    color: white;
-    position: relative;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
     flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background: #87ceeb; /* Light blue */
+    color: #333;
 }
 
 header h1 {
-    flex-grow: 1;
     margin: 0;
+    flex-grow: 1;
+    text-align: center;
 }
 
 .school-logo {
-    width: 80px;
+    width: 120px; /* Enlarged */
+    height: auto;
 }
 
 .header-buttons {
@@ -273,5 +272,6 @@ function toggleDarkMode() { document.body.classList.toggle("dark-mode"); }
 loadScores();
 updateLeaderboard();
 </script>
+
 </body>
 </html>
