--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>House Score Tracker</title>
+
 <style>
 /* --- BASIC LAYOUT --- */
 body {
@@ -21,7 +22,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background: #87ceeb; /* Light blue */
+    background: #87ceeb;
     color: #333;
 }
 
@@ -32,7 +33,7 @@ header h1 {
 }
 
 .school-logo {
-    width: 120px; /* Enlarged */
+    width: 120px;
     height: auto;
 }
 
@@ -143,7 +144,6 @@ body.dark-mode {
     color: #f0f0f0;
 }
 
-/* ⭐ Updated at your request ⭐ */
 body.dark-mode header {
     background: #999999;
     color: #fff;
@@ -162,11 +162,36 @@ body.dark-mode .leaderboard {
     background: #1e1e1e; 
 }
 </style>
+
+<!-- Firebase -->
+<script type="module">
+    import { initializeApp } from 
+        "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { getDatabase, ref, set, get, child } from 
+        "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
+
+    /* 🔴 REPLACE THIS WITH YOUR FIREBASE SETTINGS */
+    const firebaseConfig = {
+        apiKey: "YOUR-KEY",
+        authDomain: "YOUR-PROJECT.firebaseapp.com",
+        databaseURL: "https://YOUR-PROJECT.firebaseio.com",
+        projectId: "YOUR-PROJECT",
+        storageBucket: "YOUR-PROJECT.appspot.com",
+        messagingSenderId: "XXXXXX",
+        appId: "XXXXXX"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    window.db = db;
+</script>
+
 </head>
 <body>
 
 <header>
-    <img src="project/smiling-int-school-logo-1-removebg-preview.png" alt="School Logo" class="school-logo">
+    <img src="project/smiling-int-school-logo-1-removebg-preview.png" class="school-logo">
     <h1>House Score Tracker</h1>
     <div class="header-buttons">
         <button class="admin-button" onclick="toggleDarkMode()">🌙 Dark Mode</button>
@@ -182,7 +207,7 @@ body.dark-mode .leaderboard {
     <label>Druids:</label><input type="number" id="admin-druids">
     <label>Bravehearts:</label><input type="number" id="admin-bravehearts">
     <button onclick="applyManualScores()">Update Scores</button>
-    <button class="close" onclick="closeAdmin()">Close</button>
+    <button onclick="closeAdmin()">Close</button>
 </div>
 
 <!-- Scoreboard -->
@@ -192,16 +217,19 @@ body.dark-mode .leaderboard {
         <h2>Acrobats</h2>
         <p class="score" id="score-acrobats">0</p>
     </div>
+
     <div class="house-card quicksilver">
         <img src="project/quicksilver.jpeg" class="house-logo">
         <h2>Quicksilver</h2>
         <p class="score" id="score-quicksilver">0</p>
     </div>
+
     <div class="house-card druids">
         <img src="project/druids.jpeg" class="house-logo">
         <h2>Druids</h2>
         <p class="score" id="score-druids">0</p>
     </div>
+
     <div class="house-card bravehearts">
         <img src="project/bravehearts.jpeg" class="house-logo">
         <h2>Bravehearts</h2>
@@ -216,41 +244,49 @@ body.dark-mode .leaderboard {
 </section>
 
 <script>
-/* --- ADMIN LOGIN --- */
+// ADMIN LOGIN
 function adminLogin() {
     const pwd = prompt("Enter admin password:");
-    if(pwd === "1234"){
-        openAdmin();
-    } else {
-        alert("Wrong password!");
-    }
+    if (pwd === "1234") openAdmin();
+    else alert("Wrong password!");
 }
 
-/* --- ADMIN PANEL --- */
-function openAdmin() { document.getElementById("adminPanel").classList.remove("hidden"); }
-function closeAdmin() { document.getElementById("adminPanel").classList.add("hidden"); }
+function openAdmin() {
+    document.getElementById("adminPanel").classList.remove("hidden");
+}
+function closeAdmin() {
+    document.getElementById("adminPanel").classList.add("hidden");
+}
 
-/* --- SCORE SAVE / LOAD --- */
-function saveScores() {
+// --- SAVE SCORES ONLINE ---
+function saveScoresOnline() {
     const scores = {
-        acrobats: document.getElementById("score-acrobats").textContent,
-        quicksilver: document.getElementById("score-quicksilver").textContent,
-        druids: document.getElementById("score-druids").textContent,
-        bravehearts: document.getElementById("score-bravehearts").textContent
+        acrobats: parseInt(document.getElementById("score-acrobats").textContent),
+        quicksilver: parseInt(document.getElementById("score-quicksilver").textContent),
+        druids: parseInt(document.getElementById("score-druids").textContent),
+        bravehearts: parseInt(document.getElementById("score-bravehearts").textContent)
     };
-    localStorage.setItem("houseScores", JSON.stringify(scores));
-}
-function loadScores() {
-    const saved = JSON.parse(localStorage.getItem("houseScores"));
-    if(saved){
-        document.getElementById("score-acrobats").textContent = saved.acrobats;
-        document.getElementById("score-quicksilver").textContent = saved.quicksilver;
-        document.getElementById("score-druids").textContent = saved.druids;
-        document.getElementById("score-bravehearts").textContent = saved.bravehearts;
-    }
+
+    set(ref(window.db, "houseScores"), scores);
 }
 
-/* --- APPLY SCORES --- */
+// --- LOAD SCORES FROM ONLINE ---
+function loadScoresOnline() {
+    const dbRef = ref(window.db);
+
+    get(child(dbRef, "houseScores")).then(snapshot => {
+        if (snapshot.exists()) {
+            const saved = snapshot.val();
+            document.getElementById("score-acrobats").textContent = saved.acrobats;
+            document.getElementById("score-quicksilver").textContent = saved.quicksilver;
+            document.getElementById("score-druids").textContent = saved.druids;
+            document.getElementById("score-bravehearts").textContent = saved.bravehearts;
+        }
+        updateLeaderboard();
+    });
+}
+
+// APPLY SCORE CHANGES
 function applyManualScores() {
     const fields = [
         { input:"admin-acrobats", score:"score-acrobats" },
@@ -258,46 +294,49 @@ function applyManualScores() {
         { input:"admin-druids", score:"score-druids" },
         { input:"admin-bravehearts", score:"score-bravehearts" }
     ];
-    fields.forEach(item=>{
-        const inputEl=document.getElementById(item.input);
-        if(inputEl.value.trim()!==""){
-            const scoreEl=document.getElementById(item.score);
-            scoreEl.textContent = parseInt(scoreEl.textContent)+parseInt(inputEl.value);
+    fields.forEach(item => {
+        const inputEl = document.getElementById(item.input);
+        if (inputEl.value.trim() !== "") {
+            const scoreEl = document.getElementById(item.score);
+            scoreEl.textContent = parseInt(scoreEl.textContent) + parseInt(inputEl.value);
         }
-        inputEl.value="";
+        inputEl.value = "";
     });
-    saveScores();
+
+    saveScoresOnline();
     updateLeaderboard();
     closeAdmin();
 }
 
-/* --- LEADERBOARD --- */
+// LEADERBOARD UPDATE
 function updateLeaderboard() {
-    const scores=[
-        {name:"Acrobats", score:parseInt(document.getElementById("score-acrobats").textContent), class:"lb-acrobats"},
-        {name:"Quicksilver", score:parseInt(document.getElementById("score-quicksilver").textContent), class:"lb-quicksilver"},
-        {name:"Druids", score:parseInt(document.getElementById("score-druids").textContent), class:"lb-druids"},
-        {name:"Bravehearts", score:parseInt(document.getElementById("score-bravehearts").textContent), class:"lb-bravehearts"}
+    const scores = [
+        { name:"Acrobats", score:parseInt(score-acrobats.textContent), class:"lb-acrobats" },
+        { name:"Quicksilver", score:parseInt(score-quicksilver.textContent), class:"lb-quicksilver" },
+        { name:"Druids", score:parseInt(score-druids.textContent), class:"lb-druids" },
+        { name:"Bravehearts", score:parseInt(score-bravehearts.textContent), class:"lb-bravehearts" }
     ];
-    scores.sort((a,b)=>b.score-a.score);
-    const list=document.getElementById("leaderboard-list");
-    list.innerHTML="";
-    scores.forEach(entry=>{
-        const li=document.createElement("li");
-        li.className=entry.class;
-        li.innerHTML=`${entry.name} <span>${entry.score}</span>`;
+
+    scores.sort((a,b)=>b.score - a.score);
+
+    const list = document.getElementById("leaderboard-list");
+    list.innerHTML = "";
+
+    scores.forEach(entry => {
+        const li = document.createElement("li");
+        li.className = entry.class;
+        li.innerHTML = `${entry.name} <span>${entry.score}</span>`;
         list.appendChild(li);
     });
 }
 
-/* --- DARK MODE --- */
-function toggleDarkMode() { 
-    document.body.classList.toggle("dark-mode"); 
+// DARK MODE
+function toggleDarkMode() {
+    document.body.classList.toggle("dark-mode");
 }
 
-/* --- INITIALIZE --- */
-loadScores();
-updateLeaderboard();
+// INITIALIZE
+window.onload = loadScoresOnline;
 </script>
 
 </body>
